[tool.poetry]
name = "syn-cluster-armbrust"
version = "0.1.0"
description = "Comparing residual gene expression data with environmental factors"
authors = ["Jonah Valenti"]
license = "MIT"
readme = "README.md"
packages = [{include = "syn_cluster_armbrust"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
notebook = "^6.5.4"
scipy = "^1.11.1"
matplotlib = "^3.7.1"
pandas = "^2.0.3"
seaborn = "^0.12.2"
plotly = "^5.15.0"
pycmap = "^0.2.18"
ipywidgets = "^8.0.7"
plotly-express = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
